--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/uuid": "^8.3.4",
     "chai": "^4.2.0",
     "hardhat": "^2.0.0",
+    "hardhat-deploy": "^0.11.28",
     "hardhat-gas-reporter": "^1.0.9",
     "mocha": "^7.1.2",
     "prettier": "2.0.5",
